--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: 'AIzaSyBDgWYe3XTCVmhByPbm213KxDJL0rkcLO4',
+        authDomain: 'project01-f64c4.firebaseapp.com',
+        databaseURL: 'https://project01-f64c4.firebaseio.com',
+        projectId: 'project01-f64c4',
+        storageBucket: 'project01-f64c4.appspot.com',
+        messagingSenderId: '829199127735',
+        appId: '1:829199127735:web:3db486e626e90f66a46932',
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
