--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=latin-ext"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root">
-      <header></header>
+      <header class="header"></header>
+      <main class="main"></main>
+      <footer class="main"></footer>
     </div>
   </body>
 </html>
